Fixed a small white space bug

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body, html {
-	height: 100%;
+    height: 100%;
+    margin: 0px;
+    overflow-x: hidden; 
 }
 
 .bg {
